--- a/upload/admin/view/template/localisation/zone_list.twig
+++ b/upload/admin/view/template/localisation/zone_list.twig
@@ -4,8 +4,8 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_country }}"{% if sort == 'c.name' %} class="{{ order|lower }}"{% endif %}>{{ column_country }}</a></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'z.name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
+          <th><a href="{{ sort_country }}"{% if sort == 'cd.name' %} class="{{ order|lower }}"{% endif %}>{{ column_country }}</a></th>
+          <th><a href="{{ sort_name }}"{% if sort == 'zd.name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
           <th><a href="{{ sort_code }}"{% if sort == 'z.code' %} class="{{ order|lower }}"{% endif %}>{{ column_code }}</a></th>
           <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="text-end">{{ column_action }}</th>
