--- a/upload/admin/view/template/marketplace/cron.twig
+++ b/upload/admin/view/template/marketplace/cron.twig
@@ -29,7 +29,9 @@
         <div class="mb-3">
           <div class="input-group">
             <div class="input-group-text">{{ entry_cron }}</div>
-            <input type="text" value="wget &quot;{{ cron }}&quot; --read-timeout=5400" id="input-cron" class="form-control"/>
+
+            <input type="text" value="php &quot;{{ cron }}&quot; --read-timeout=5400" id="input-cron" class="form-control"/>
+
             <button type="button" id="button-copy" data-bs-toggle="tooltip" title="{{ button_copy }}" class="btn btn-light"><i class="fa-regular fa-copy"></i></button>
           </div>
         </div>
