--- a/upload/install/view/template/install/step_2.twig
+++ b/upload/install/view/template/install/step_2.twig
@@ -148,6 +148,20 @@
                       <span class="text-danger"><i class="fa-solid fa-circle-xmark"></i></span>
                     {% endif %}</td>
                 </tr>
+                <tr{% if not zip %} class="table-danger"{% endif %}>
+                  <td>{{ text_zip }}</td>
+                  <td>{% if zip %}
+                      {{ text_on }}
+                    {% else %}
+                      {{ text_off }}
+                    {% endif %}</td>
+                  <td>{{ text_on }}</td>
+                  <td class="text-center">{% if zip %}
+                      <span class="text-success"><i class="fa-solid fa-check"></i></span>
+                    {% else %}
+                      <span class="text-danger"><i class="fa-solid fa-circle-xmark"></i></span>
+                    {% endif %}</td>
+                </tr>
                 <tr{% if not curl %} class="table-danger"{% endif %}>
                   <td>{{ text_curl }}</td>
                   <td>{% if curl %}
