--- a/upload/admin/view/template/cms/comment.twig
+++ b/upload/admin/view/template/cms/comment.twig
@@ -5,9 +5,15 @@
       <div class="float-end">
         <button type="button" data-bs-toggle="tooltip" title="{{ button_filter }}" onclick="$('#filter-comment').toggleClass('d-none');" class="btn btn-light d-lg-none"><i class="fa-solid fa-filter"></i></button>
         <button type="button" id="button-rating" data-bs-toggle="tooltip" title="{{ button_rating }}" class="btn btn-light"><i class="fa-solid fa-sync"></i></button>
-        <button type="submit" form="form-comment" formaction="{{ approve }}" data-bs-toggle="tooltip" title="{{ button_approve }}" onclick="return confirm('{{ text_confirm }}');" class="btn btn-success"><i class="fa-solid fa-check"></i></button>
-        <button type="submit" form="form-comment" formaction="{{ spam }}" data-bs-toggle="tooltip" title="{{ button_spam }}" onclick="return confirm('{{ text_confirm }}');" class="btn btn-warning"><i class="fa-solid fa-ban"></i></button>
-        <button type="submit" form="form-comment" formaction="{{ delete }}" data-bs-toggle="tooltip" title="{{ button_delete }}" onclick="return confirm('{{ text_confirm }}');" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-list-check"></i> {{ button_action }} <i class="fa-solid fa-caret-down fa-fw"></i></button>
+          <ul class="dropdown-menu">
+            <li><button type="submit" form="form-comment" formaction="{{ approve }}" class="dropdown-item"><i class="fa-solid fa-check text-success"></i> {{ button_approve }}</button></li>
+            <li><button type="submit" form="form-comment" formaction="{{ spam }}" class="dropdown-item"><i class="fa-solid fa-ban text-danger"></i> {{ button_spam }}</button></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><button type="submit" form="form-comment" formaction="{{ delete }}" onclick="return confirm('{{ text_confirm }}');" class="dropdown-item"><i class="fa-regular fa-trash-can text-danger"></i> {{ text_delete }}</button></li>
+          </ul>
+        </div>
       </div>
       <h1>{{ heading_title }}</h1>
       <ol class="breadcrumb">
