--- a/upload/catalog/view/template/cms/comment.twig
+++ b/upload/catalog/view/template/cms/comment.twig
@@ -66,7 +66,7 @@ $('#input-sort').on('change', function(e) {
 });
 
 // Add Comment
-$('#cms-blog').on('click', '[data-oc-toggle=\'comment\']', function(e) {
+$('#cms-comment').on('click', '[data-oc-toggle=\'comment\']', function(e) {
     e.preventDefault();
 
     var element = this;
@@ -183,7 +183,7 @@ $('#comment').on('click', '[data-oc-toggle=\'refresh\']', function(e) {
 });
 
 // Rating
-$('#comment-container').on('click', '[data-oc-toggle=\'rate\']', function(e) {
+$('#comment').on('click', '[data-oc-toggle=\'rate\']', function(e) {
     e.preventDefault();
 
     var element = this;
