--- a/upload/admin/view/template/catalog/category.twig
+++ b/upload/admin/view/template/catalog/category.twig
@@ -37,6 +37,15 @@
                 <ul id="autocomplete-name" class="dropdown-menu"></ul>
               </div>
               <div class="mb-3">
+                <label for="input-store" class="form-label">{{ entry_store }}</label>
+                <select name="filter_store_id" id="input-store" class="form-select">
+                  <option value=""></option>
+                  {% for store in stores %}
+                    <option value="{{ store.store_id }}"{% if store.store_id == filter_store_id %} selected{% endif %}>{{ store.name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <div class="mb-3">
                 <label for="input-status" class="form-label">{{ entry_status }}</label>
                 <select name="filter_status" id="input-status" class="form-select">
                   <option value=""></option>
