--- a/upload/admin/view/template/catalog/product.twig
+++ b/upload/admin/view/template/catalog/product.twig
@@ -75,6 +75,14 @@
                 </div>
               </div>
               <div class="mb-3">
+                <label for="input-store-id" class="form-label">{{ entry_store }}</label> <select name="filter_store_id" id="input-store-id" class="form-select">
+                  <option value=""></option>
+                  {% for store in stores %}
+                    <option value="{{ store.store_id }}"{% if store.store_id == filter_store_id %} selected{% endif %}>{{ store.name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <div class="mb-3">
                 <label for="input-status" class="form-label">{{ entry_status }}</label> <select name="filter_status" id="input-status" class="form-select">
                   <option value=""></option>
                   <option value="1"{% if filter_status == '1' %} selected{% endif %}>{{ text_enabled }}</option>
